# mdit

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  FINISHING.md  LICENSE  README.md
.claude/: settings.json  settings.local.json
crates/mdit-core/: Cargo.toml
crates/mdit-core/src/: lib.rs  theme.rs
crates/mdit-core/src/document/: formatting.rs  mod.rs  view_mode.rs
crates/mdit-core/src/find/: mod.rs
crates/mdit-core/src/markdown/: highlighter.rs
crates/mdit-core/src/preferences/: mod.rs
crates/mdit-core/src/render/: editor_mode.rs  mod.rs  viewer.rs
crates/mdit-core/tests/: attributes_tests.rs  cursor_tracker_tests.rs  editor_renderer_tests.rs  formatting_tests.rs  highlighter_tests.rs  image_handler_tests.rs  parser_tests.rs  renderer_tests.rs
docs/: STATUS.md
docs/plans/: 2026-02-24-bugfix-phase1x.md  2026-02-24-mdit-implementation.md  2026-02-24-mdit-prd.md  2026-02-24-multi-tab-file-io-design.md  2026-02-24-multi-tab-file-io.md  2026-02-27-code-block-rendering.md  2026-02-27-code-block-ui-design.md  2026-02-27-code-block-ui.md  2026-02-27-ui-redesign-sidebar-tabbar.md  2026-03-03-sidebar-toggle-formatting-design.md  2026-03-03-sidebar-toggle-formatting.md  2026-03-04-table-rendering-design.md  2026-03-04-table-rendering.md  2026-03-06-table-grid-fix-design.md  2026-03-06-table-grid-fix.md  2026-03-06-table-styling-design.md  2026-03-06-table-styling.md
docs/superpowers/plans/: 2026-03-18-code-quality-refactoring.md  2026-03-18-sidebar-viewer-animation.md  2026-03-24-font-size-configurable.md  2026-03-24-welcome-overlay.md  2026-03-25-codebase-optimization.md
docs/superpowers/specs/: 2026-03-18-custom-find-bar-design.md  2026-03-18-sidebar-viewer-animation-design.md  2026-03-24-font-size-configurable-design.md  2026-03-24-welcome-overlay-design.md  2026-03-25-codebase-optimization-design.md
ressources/: Info.plist  mdit-app-icon.icns
scripts/: build-dmg.sh
src/: app.rs  document.rs  lib.rs  menu.rs
src/app/: file_ops.rs  find.rs  helpers.rs  mod.rs  mode.rs  preferences.rs  tabs.rs
src/editor/: apply.rs  cursor_tracker.rs  document_state.rs  editor_renderer.rs  formatting.rs  image_handler.rs  math_view.rs  mod.rs  renderer.rs  tab_manager.rs  text_storage.rs  text_view.rs
src/export/: pdf.rs
src/markdown/: attributes.rs  highlighter.rs  mod.rs  parser.rs
src/ui/: appearance.rs  find_bar.rs  mod.rs  path_bar.rs  sidebar.rs  tab_bar.rs  toolbar.rs  welcome_overlay.rs
tests/: apply_tests.rs  attributes_tests.rs  cursor_tracker_tests.rs  editor_renderer_tests.rs  formatting_tests.rs  highlighter_tests.rs  image_handler_tests.rs  parser_tests.rs  renderer_tests.rs  tab_label_tests.rs  tab_manager_tests.rs
