[package]
name = "mdit"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "mdit"
path = "src/main.rs"

[lib]
name = "mdit"
path = "src/lib.rs"

[dependencies]
objc2 = "0.6.3"
objc2-foundation = { version = "0.3.2", features = [
    "NSString", "NSAttributedString",
    "NSDictionary", "NSArray", "NSURL", "NSData",
    "NSError",
] }
objc2-app-kit = { version = "0.3.2", features = [
    "NSApplication",
    "NSWindow", "NSWindowController",
    "NSGraphics",
    "NSTextView", "NSTextStorage", "NSLayoutManager", "NSTextContainer",
    "NSScrollView",
    "NSDocument", "NSDocumentController",
    "NSColor", "NSFont", "NSFontDescriptor",
    "NSPanel", "NSVisualEffectView",
    "NSPrintOperation", "NSPrintInfo",
    "NSMenu", "NSMenuItem",
    "NSParagraphStyle", "NSText",
    "NSResponder", "NSView",
    "NSTextAttachment",
] }
objc2-web-kit = { version = "0.3.2", features = [
    "WKWebView",
    "WKWebViewConfiguration",
    "WKNavigation",
] }
comrak = { version = "0.50.0", default-features = false }
syntect = { version = "5.3.0", default-features = false, features = [
    "default-fancy",
] }
uuid = { version = "1.21.0", features = ["v4"] }

[profile.release]
lto = true
opt-level = 3
