[workspace]
resolver = "2"
members = ["crates/mdit-core"]
# Phase 0: AppKit-Build (root crate) ist bewusst entfernt.
# Der alte src/ Code bleibt als Referenz, ist aber kein Workspace-Member.
# Die GPUI-UI-Crate (crates/mdit-ui) entsteht in Phase 1+.

[workspace.package]
version = "1.0.0"
edition = "2021"
license = "MIT"
authors = ["Soron2038"]

[profile.release]
lto = true
opt-level = 3
