[package]
name = "mdit-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Plattformneutrale Core-Logik für mdit (Markdown-Parsing, Highlighting, Render-Runs, Theme, Preferences)."

[dependencies]
comrak = { version = "0.50.0", default-features = false }
syntect = { version = "5.3.0", default-features = false, features = [
    "default-fancy",
] }
uuid = { version = "1.21.0", features = ["v4"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
directories = "5.0"
